[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CryptographyMethods"
version = "0.0.1"
authors = [
  { name="Hunter Dale", email="hunter@guyyatsu.me" },
]
description = "Lab-93's implementation of Python's cryptography module."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/guyyatsu/CryptographyMethods"
"Bug Tracker" = "https://github.com/guyyatsu/CryptographyMethods/issues"